--- a/menuStyle.css
+++ b/menuStyle.css
@@ -2,6 +2,14 @@ h1{
     text-align: center;
     margin-top:2em;
 }
+h3{
+    text-align: center;
+    color:lightgray;
+}
+h2{
+    text-align: center;
+    color:white;
+}
 body{
     background-color: black;
 }
@@ -10,28 +18,7 @@ body{
     padding-bottom:2em;
 }
 
-.nav-item{
-    color:black;
-    text-decoration: none;
-    
-    background-color: white;
-}
-table{
-    border: .255em solid black;
-    
-}
-td{
-    border: .255em solid black;
-}
-thead{
-    border: .255em solid black;
-}
-tr{
-    border: .255em solid black;
-}
-th{
-    border: .255em solid black;
-}
+
 nav img {
     max-width: 20%;
     max-height: 20%;
@@ -48,7 +35,8 @@ nav img {
     background-position: center;
     background-blend-mode: color;
     margin-bottom:5em;
-    
+    min-height: 390px;
+
     
 }
 .fixed-bg h1{
@@ -74,7 +62,17 @@ nav img {
 
 }
 nav{
-    border-bottom: 4px solid #00BBF0;
-    background-color: white;
+    
     margin-bottom: 0px;
 }
+.logo
+{
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+hr{
+    color:white;
+}
+
