--- a/stylesheet.css
+++ b/stylesheet.css
@@ -103,7 +103,13 @@ nav img {
   .title {
     color: grey;
   }
-  
+  iframe{
+
+    margin-top:50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
   /*style for the 
 
   
