--- a/menuStyle.css
+++ b/menuStyle.css
@@ -76,3 +76,12 @@ hr{
     color:white;
 }
 
+.pictures {
+    width: 275px;
+    height: 300px;
+    border: 5px solid; color: white;
+}
+
+.fontColor {
+    color: white;
+}
