--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,6 +105,11 @@ nav img {
     color: grey;
   }
   
-  /*style for the 
+  iframe{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top:100px;
+  }
 
   
