--- a/revStyle.css
+++ b/revStyle.css
@@ -23,23 +23,56 @@ body {
     color: var(--light-color);
     line-height: 1.6;
 }
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 2.5rem;
-    z-index: 100;
+nav img {
+    max-width: 20%;
+    max-height: 20%;
+}
+.fixed-bg {
+    background-image: url('https://images.pexels.com/photos/6241298/pexels-photo-6241298.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    width:auto;
+    height:500px;
+    background-size:cover;
+    background-repeat: no-repeat;
+    margin-top: 0px;
+    border: 50px;
+    background-attachment: fixed;
+    background-position: center;
+    background-blend-mode: color;
+    margin-bottom:5em;
+    min-height: 390px;
+
+    
+}
+.fixed-bg h1{
+    width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    align-self: center;
+    color:black;
+    background-color: rgba(255, 255, 255, 0.507);
+    
+    
+
+}
+.fixed-bg h2{
+    width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    align-self: center;
+    color:black;
+    background-color: rgba(255, 255, 255, 0.507);
+    
+    
+
+}
+nav{
+    
+    margin-bottom: 0px;
+}
+.logo
+{
     width: 100%;
-    transition: background 0.3s;
-    position: fixed;
-    top: 0;
-    left: 0;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-
-nav ul {
-    display: flex;
-    list-style: none;
-}
-
-nav li:not(:last-child), .welcome-event div span {
-    margin-right: 1.5rem; }
